tests/ui/macros/cfg_select_parse_error.stderr
error: macro expansion ignores `@` and any tokens following
  --> $DIR/cfg_select_parse_error.rs:9:22
   |
LL |       println!(cfg_select! {
   |  ______________-
LL | |         false => { 1 @ 2 }
   | |                      ^
LL | |
LL | |         _ => { "not unix" }
LL | |     });
   | |_____- caused by the macro expansion here
   |
   = note: the usage of `cfg_select!` is likely invalid in expression context
help: you might be missing a semicolon here
   |
LL |     };);
   |      +

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `@`
  --> $DIR/cfg_select_parse_error.rs:16:29
   |
LL |     false => { fn foo() { 1 @ 2 } }
   |                             ^ expected one of `.`, `;`, `?`, `}`, or an operator

error: aborting due to 2 previous errors

